Wrong creation in rotated curve objects #43498

Closed
opened 2015-01-31 12:14:17 +01:00 by Karja Krähwald · 17 comments

System Information
Windows 7 64, GTX 980

Blender Version
Broken: bbf09d9 + 3f57714
(I think this has never worked)

Short description of error
The radius setting in a curves Editmode doesnt work correct if the curve object is rotated.

Exact steps for others to reproduce the error
Very simple:

  • Create any Curve object (most noticable on circles)
  • Rotate the curve object X 90°
  • Go into Editmode and create a new curve (circle)
  • Change Radius setting

Problem: Only global X Axis is affected by the setting.

**System Information** Windows 7 64, GTX 980 **Blender Version** Broken: bbf09d9 + 3f57714 (I think this has never worked) **Short description of error** The radius setting in a curves Editmode doesnt work correct if the curve object is rotated. **Exact steps for others to reproduce the error** Very simple: - Create any Curve object (most noticable on circles) - Rotate the curve object X 90° - Go into Editmode and create a new curve (circle) - Change Radius setting >Problem: Only global X Axis is affected by the setting.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @karja

Added subscriber: @karja
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Julian Eisel self-assigned this 2015-02-02 00:19:15 +01:00
Member

You need to apply the rotation first (Object mode -> Ctrl+A). Please add a comment if this still doesn't give you the desired behaviour. We can then consider reopening.

You need to apply the rotation first (Object mode -> Ctrl+A). Please add a comment if this still doesn't give you the desired behaviour. We can then consider reopening.
Member

But thanks for the report :)

But thanks for the report :)

I think you misunderstand me. Applying works, but isnt a solution where the curve object should keep the object mode rotation. For example to trick the twisting.
CurveRadiusBug.png
This curve object is rotated X 90° (object mode) - shown by the big circle.
By adding additional curves in Editmode they get automatically rotated for global space, which is no problem.
The problem with new curves in Editmode seem that local Z-Axis Scale is ignored or not taken into account when changing "Add Nurbs Circle - Radius".
It only affects local X Y Axis of the object and that results in a pressed circle.

Keep in mind that new creations first use the Grid Floor Scale or the last radius you have set it up to determine the circles radius. Lets say I have it at 0,05 - then this is the curve I will start with:
CurveRadiusBug2.png

I think you misunderstand me. Applying works, but isnt a solution where the curve object should keep the object mode rotation. For example to trick the twisting. ![CurveRadiusBug.png](https://archive.blender.org/developer/F140410/CurveRadiusBug.png) This curve object is rotated X 90° (object mode) - shown by the big circle. By adding additional curves in Editmode they get automatically rotated for global space, which is no problem. The problem with new curves in Editmode seem that **local Z-Axis Scale is ignored or not taken into account** when changing "Add Nurbs Circle - Radius". It only affects local X Y Axis of the object and that results in a pressed circle. Keep in mind that new creations first use the Grid Floor Scale or the last radius you have set it up to determine the circles radius. Lets say I have it at 0,05 - then this is the curve I will start with: ![CurveRadiusBug2.png](https://archive.blender.org/developer/F140414/CurveRadiusBug2.png)
Member

Added subscriber: @zeauro

Added subscriber: @zeauro
Member

I still don't think we have a bug here, it's more like you want it to work this way, but essentially everything works fine. I'd like to get input from a more advanced user than me though ;D @zeauro, does this look like a actual bug for you? Or do you have a workaround or such?

I still don't think we have a bug here, it's more like you want it to work this way, but essentially everything works fine. I'd like to get input from a more advanced user than me though ;D @zeauro, does this look like a actual bug for you? Or do you have a workaround or such?

The workaround is to use scale operator of edit mode instead of this setting.
It is probably what are doing most of users that did not notice the problem.

But obviously, the setting does not work as it should, as expected when you have already use it in edit mode for meshes.

I mean what is expected is a scale of primitive that preserves its shape.

The workaround is to use scale operator of edit mode instead of this setting. It is probably what are doing most of users that did not notice the problem. But obviously, the setting does not work as it should, as expected when you have already use it in edit mode for meshes. I mean what is expected is a scale of primitive that preserves its shape.

May i ask to reopen this case?
Workaround is easy and not really a problem, only sort of annoying. But as zeauro pointed out, this is not consistent to mesh setting.

Compare this to a Plane mesh - its flat and Z could be ignored for the radius setting but works fine in any rotation.

May i ask to reopen this case? Workaround is easy and not really a problem, only sort of annoying. But as zeauro pointed out, this is not consistent to mesh setting. Compare this to a Plane mesh - its flat and Z could be ignored for the radius setting but works fine in any rotation.
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Oki, will reopen for now, but would like to get @ideasman42's input

Oki, will reopen for now, but would like to get @ideasman42's input
Julian Eisel removed their assignment 2015-02-08 14:18:23 +01:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

This issue was referenced by c4e8d74563

This issue was referenced by c4e8d74563e234e6a2cb6ce77f42452b5577fe38

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c4e8d74563.

Closed by commit c4e8d74563.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43498
No description provided.